--- a/LiquidAvalonia.Demo/Views/MainWindow.axaml
+++ b/LiquidAvalonia.Demo/Views/MainWindow.axaml
@@ -132,14 +132,17 @@
                         <liquid:Glass
                             Grid.Column="0"
                             Width="200"
-                            Height="200">
+                            Height="200"
+                            Smoothness="0.6"
+                            RefractionThreshold="0.3">
                             
                             <liquid:Glass.Styles>
                                 <Style Selector="liquid|Glass">
                                     <Style.Animations>
                                         <Animation
                                             Duration="00:00:03"
-                                            IterationCount="Infinite">
+                                            IterationCount="Infinite"
+                                            PlaybackDirection="Alternate">
                                             
                                             <KeyFrame Cue="0%">
                                                 <Setter Property="TintColor" Value="Red"/>
@@ -166,7 +169,9 @@
                             Grid.Column="1"
                             Width="200"
                             Height="200"
-                            TintColor="Azure">
+                            TintColor="Azure"
+                            Smoothness="0.6"
+                            RefractionThreshold="0.3">
                             
                             <liquid:Glass.Styles>
                                 <Style Selector="liquid|Glass">
@@ -193,7 +198,8 @@
                             Grid.Column="2"
                             Width="200"
                             Height="200"
-                            TintColor="Azure">
+                            TintColor="Azure"
+                            RefractionThreshold="0.3">
                             
                             <liquid:Glass.Styles>
                                 <Style Selector="liquid|Glass">
@@ -221,7 +227,8 @@
                             Grid.Column="3"
                             Width="200"
                             Height="200"
-                            TintColor="Azure">
+                            TintColor="Azure"
+                            Smoothness="0.6">
                             
                             <liquid:Glass.Styles>
                                 <Style Selector="liquid|Glass">
@@ -233,7 +240,7 @@
                                             PlaybackDirection="Alternate">
                                             
                                             <KeyFrame Cue="0%">
-                                                <Setter Property="RefractionThreshold" Value="0"/>
+                                                <Setter Property="RefractionThreshold" Value="0.05"/>
                                             </KeyFrame>
                                             
                                             <KeyFrame Cue="100%">
